objects/HealthCloudGA__EhrCarePlanParticipant__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__CarePlanActivity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Activity</label>
        <referenceTo>HealthCloudGA__EhrCarePlanActivity__c</referenceTo>
        <relationshipLabel>Care Plan Participants</relationshipLabel>
        <relationshipName>CarePlanParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan</label>
        <referenceTo>HealthCloudGA__EhrCarePlan__c</referenceTo>
        <relationshipLabel>Care Plan Participants</relationshipLabel>
        <relationshipName>CarePlanParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsRestricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsRestricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsVisibleOnPatientCard__c</fullName>
        <description>If returns true, the record will appear on Patient Card</description>
        <formula>true</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsVisibleOnPatientCard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>HealthCloudGA__EhrPatient__c</referenceTo>
        <relationshipLabel>Care Plan Participants</relationshipLabel>
        <relationshipName>CarePlanParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PractitionerName255__c</fullName>
        <label>Practitioner Name 255</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__PractitionerName__c</fullName>
        <label>Practitioner Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Practitioner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Practitioner</label>
        <referenceTo>HealthCloudGA__EhrPractitioner__c</referenceTo>
        <relationshipLabel>Care Plan Participants</relationshipLabel>
        <relationshipName>CarePlanParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RelatedPerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Person</label>
        <referenceTo>HealthCloudGA__EhrRelatedPerson__c</referenceTo>
        <relationshipLabel>Care Plan Participants</relationshipLabel>
        <relationshipName>CarePlanParticipants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleCode__c</fullName>
        <description>Symbol in syntax defined by the system</description>
        <label>Role Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleLabel__c</fullName>
        <description>Friendly name for role</description>
        <label>Role Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__RoleSystem__c</fullName>
        <description>Identity of the terminology system</description>
        <label>Role System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemId__c</fullName>
        <externalId>true</externalId>
        <label>Source System ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystemModified__c</fullName>
        <description>When last updated</description>
        <label>Source System Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SourceSystem__c</fullName>
        <defaultValue>&quot;Health1-&quot;+$Organization.Id</defaultValue>
        <description>Identifies the system that created the record and owns update rights to it.</description>
        <inlineHelpText>Identifies the system that created the record and owns update rights to it. Defaults to Health1 for manually created records.</inlineHelpText>
        <label>Source System</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>EHR Care Plan Participant</label>
    <nameField>
        <displayFormat>Part-{0}</displayFormat>
        <label>EHR Care Plan Participant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EHR Care Plan Participants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>